# Basic-Mathematical-problems-of-SLAM

./: README.md
3D_ICP_with_Ceres/: CMakeLists.txt  README.md  icp_3d.cpp  icp_3d.h  utils.cpp  utils.h
Bundle_Adjustment_with_g2o/: CMakeLists.txt  ba.cpp  g2oTypes.hpp  schur_complete.cpp
Degraded_scene_state_estimation/: Eliminate_translation_on_degraded_direction.cpp
Essential_matrix_decomposition/: Essential_matrix_decomposition.cpp  Essential_matrix_decomposition.py
ICP_realization_with_kdTree_numpy/: Geometry.py  ICP.py  KdTree.py  README.md  Utils.py  main.py
Initial_value_and_local_minimum_of_nonlinear_optimization_problem/: Initial_value_and_local_minimum_of_nonlinear_optimization_problem.cpp
Matrix_theories_in_SLAM/: Matrix_theories_in_SLAM.cpp  sparse_matrix.cpp
Nullspace_and_landmark_Triangulation/: Nullspace_of_hessian_and_landmark_triangulation.cpp
Point2Line_ICP_with_g2o/: CMakeLists.txt  g2oTypes.hpp  point_to_line_icp.cpp
Pose_graph_optimization_with_numpy/: README.md  pgo_optimization.py  sphere2200.g2o
Prove_gravity_can_not_decide_yaw_angle/: Prove_gravity_can_not_decide_yaw_angle.cpp
Weight_influence_of_least_square_method/: Weight_influence_of_least_square_method.cpp
